<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/isbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textIsbn" />

    <EditText
        android:id="@+id/titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textTitre" />

    <EditText
        android:id="@+id/annee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textAnnee"
        android:inputType="number" />

    <EditText
        android:id="@+id/auteur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textAuteur" />

    <EditText
        android:id="@+id/nbPages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textNbPages"
        android:inputType="number" />
    <EditText
        android:id="@+id/editeur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textEditeur" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/modifier"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/textModif" />

        <Button
            android:id="@+id/supprimer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/textSuppr" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/valider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/textValid" />

        <Button
            android:id="@+id/annuler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/textAnnul" />
    </LinearLayout>
</LinearLayout>